// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > vue 2.7 v-for > ./fixtures/v-for/v-for.tsx 1`] = `
"// @ts-nocheck
const list = [1, 2, 3]

export default () => (
  <>
    {Array.from(list, (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}
  </>
)
"
`;

exports[`jsx-vue-directive > vue 2.7 v-for > ./fixtures/v-for/v-for.vue 1`] = `
"<script setup lang="tsx">
const map = new Map([
  [1, '2'],
  [3, '4'],
])
const set = new Set(['1', '2', '3'])
const object = { id: 1, name: 'admin' }
let selected = 0

defineRender(() => (
  <>
    {Array.from(4, (i) => <div key={i}>
      <div>{i}</div>
    </div>)}

    {Array.from(object, (value, key, index) => <div key={index}>
      {key}: {value}
    </div>)}

    {Array.from([1, 2, 3][Symbol.iterator](), (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}

    {Array.from([1, 2, 3], (i, __MACROS_index) => <div v-memo={[selected === i]} key={i}>
      <div>{i}</div>
    </div>)}

    {(set) ? Array.from(set, (i) => <div key={i}>
      <div>{i}</div>
    </div>) : null}

    {Array.from(map, ([key, value], index) => <div key={index}>
      <div>
        {key}: {value}
      </div>
    </div>)}
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > vue 3 v-for > ./fixtures/v-for/v-for.tsx 1`] = `
"
import { renderList as __MACROS_renderList } from "vue";// @ts-nocheck
const list = [1, 2, 3]

export default () => (
  <>
    {__MACROS_renderList(list, (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}
  </>
)
"
`;

exports[`jsx-vue-directive > vue 3 v-for > ./fixtures/v-for/v-for.vue 1`] = `
"<script setup lang="tsx">
import { renderList as __MACROS_renderList } from "vue";
const map = new Map([
  [1, '2'],
  [3, '4'],
])
const set = new Set(['1', '2', '3'])
const object = { id: 1, name: 'admin' }
let selected = 0

defineRender(() => (
  <>
    {__MACROS_renderList(4, (i) => <div key={i}>
      <div>{i}</div>
    </div>)}

    {__MACROS_renderList(object, (value, key, index) => <div key={index}>
      {key}: {value}
    </div>)}

    {__MACROS_renderList([1, 2, 3][Symbol.iterator](), (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}

    {__MACROS_renderList([1, 2, 3], (i, __MACROS_index) => <div v-memo={[selected === i]} key={i}>
      <div>{i}</div>
    </div>)}

    {(set) ? __MACROS_renderList(set, (i) => <div key={i}>
      <div>{i}</div>
    </div>) : null}

    {__MACROS_renderList(map, ([key, value], index) => <div key={index}>
      <div>
        {key}: {value}
      </div>
    </div>)}
  </>
))
</script>
"
`;
